# docker-fastapi-panel

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
