[project]
name = "docker-fastapi-panel"
version = "0.1.0"
description = ""
authors = [
    {name = "Ihor Savenko",email = "csigorek@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "docker (>=7.1.0,<8.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
